can no longer enter blank messages. Added Grid Styling and fixed scrollbar.

--- a/public/styles/chat.css
+++ b/public/styles/chat.css
@@ -4,36 +4,36 @@
     box-sizing: border-box;
 }
 
-body {
+html, body {
     font: 13px Helvetica, Arial;
-}
-
-form {
-    background: #000;
-    padding: 3px;
-    position: fixed;
-    bottom: 0;
     width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
-form input {
-    border: 0;
-    padding: 10px;
-    width: 90%;
-    margin-right: 0.5%;
+#root{
+    width: 100%;
+    height: 100%;
 }
 
-form button {
-    width: 9%;
-    background: rgb(130, 224, 255);
-    border: none;
-    padding: 10px;
+#container {
+    display: grid;
+    grid-template-columns: 20% 65% 15%;
+    grid-template-rows: 96% 4%;
+    grid-template-areas: 
+        "messages messages sidebar"
+        "chat chat sidebar";
+    width: 100%;
+    height: 100%;
 }
 
 #messages {
+    display: inline-block;
+    grid-area: messages;
     list-style-type: none;
     margin: 0;
     padding: 0;
+    overflow-y: scroll;
 }
 
 #messages li {
@@ -43,3 +43,55 @@ form button {
 #messages li:nth-child(odd) {
     background: #eee;
 }
+
+#sidebar-online{
+    display: inline-block;
+    grid-area: sidebar;
+}
+
+#chat{
+    display: inline-block;
+    grid-area: chat;
+    background: #000;
+    padding: 1px;
+    bottom: 0;
+    width: 100%;
+}
+
+#chat input{
+    border: 0;
+    padding: 10px;
+    width: 90%;
+    margin-right: 0.5%;
+}
+
+#chat button {
+    width: 9%;
+    background: rgb(130, 224, 255);
+    border: none;
+    padding: 10px;
+}
+
+
+/* General Settings */
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+/* Track */
+::-webkit-scrollbar-track {
+background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+background: #555;
+}
+
